finished list excercise

--- a/html-exercises/lists/index.html
+++ b/html-exercises/lists/index.html
@@ -22,15 +22,31 @@
     <p>
         <ol>
             <li>Clean my room</li>
-            <li>Bake cookies</li>
+            <li><strong>Bake cookies</strong></li>
             <li>Go for a walk</li>
-            <li>Walk the dog</li>
+            <li><em>Walk the dog</em></li>
             <li>Feed the fish</li>
         </ol>
     </p>
-   
-An ordered list of todo’s you need to get done today
-An unordered list of places you’d like to visit someday
-An ordered list of your all time top 5 favorite video games or movies
+
+    <h2>An unordered list of places you’d like to visit someday</h2>
+    <p>
+        <ul>
+            <li>France</li>
+            <li>London</li>
+            <li>Italy</li>
+            <li><strong>Canada</strong></li>
+            <li>Spain</li>
+        </ul>
+    </p>
+
+    <h2>An ordered list of your all time top 3 favorite video games or movies</h2>
+    <p>
+        <ol>
+            <li><strong>Dune</strong></li>
+            <li>Lord of the rings</li>
+            <li>Dune again</li>
+        </ol>
+    </p>
 </body>
 </html>
