--- a/html-exercises/odin-recipes/recipes/lasagne.html
+++ b/html-exercises/odin-recipes/recipes/lasagne.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Lasagne</h1>
+
+    <p><a href="/html-exercises/odin-recipes/index.html">Back to homepage</a></p>
 </body>
 </html>
