--- a/html-exercises/odin-recipes/recipes/lasagne.html
+++ b/html-exercises/odin-recipes/recipes/lasagne.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagne</title>
+    <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagne</h1>
-
+    <h1>Lasagna</h1>
+    <img src="../images/lasagne.jpg" alt="a plate of lasagna">
     <p><a href="/html-exercises/odin-recipes/index.html">Back to homepage</a></p>
 </body>
 </html>
