Added a description to the lasagna page

--- a/html-exercises/odin-recipes/recipes/lasagne.html
+++ b/html-exercises/odin-recipes/recipes/lasagne.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagne.jpg" alt="a plate of lasagna">
+        <img src="../images/lasagne.jpg" alt="a plate of lasagna" height="300px" width="auto">
+        <article>
+            <h2>Description</h2>
+            <p>A rich and creamy whole-wheat pasta dish filled layer by layer with refreshingly fresh onions and garlic, lathered in a succulent sauce and topped with imported, premium quality mozzarella.</p>
+        </article>    
     <p><a href="/html-exercises/odin-recipes/index.html">Back to homepage</a></p>
 </body>
 </html>
