Added ingredients to lasagna page

--- a/html-exercises/odin-recipes/recipes/lasagne.html
+++ b/html-exercises/odin-recipes/recipes/lasagne.html
@@ -11,6 +11,15 @@
         <article>
             <h2>Description</h2>
             <p>A rich and creamy whole-wheat pasta dish filled layer by layer with refreshingly fresh onions and garlic, lathered in a succulent sauce and topped with imported, premium quality mozzarella.</p>
+        
+            <h2>Ingredients</h2>
+            <ul>
+                <li>pasta</li>
+                <li>Tomatoes</li>
+                <li>Garlic</li>
+                <li>onions</li>
+                <li>sauce</li>
+            </ul>
         </article>    
     <p><a href="/html-exercises/odin-recipes/index.html">Back to homepage</a></p>
 </body>
