Added steps to lasagna page

--- a/html-exercises/odin-recipes/recipes/lasagne.html
+++ b/html-exercises/odin-recipes/recipes/lasagne.html
@@ -20,6 +20,15 @@
                 <li>onions</li>
                 <li>sauce</li>
             </ul>
+
+            <h2>Steps</h2>
+            <ol>
+                <li>Boil pasta: Cook in a large pot of salted water per the recipe below.</li>
+                <li>Prepare meat sauce: Cook sausage and beef with onion and garlic.</li> 
+                <li>Drain well, add the pasta sauce & simmer it for a few minutes to thicken.</li>
+                <li>Combine cheese mixture: Stir the cheese mixture together in a bowl.</li>
+                <li> Layer & bake: Layer the meat sauce and cheese mixture with lasagna noodles and bake until browned and bubbly.     </li>       
+            </ol>
         </article>    
     <p><a href="/html-exercises/odin-recipes/index.html">Back to homepage</a></p>
 </body>
