--- a/html-exercises/odin-recipes/index.html
+++ b/html-exercises/odin-recipes/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <p><a href="recipes/lasagne.html">lasagne</a></p>
+    <ol>
+        <li><a href="recipes/lasagne.html">lasagne</a></li>
+        <li><a href="recipes/fries.html">fries</a></li>
+    </ol>
 </body>
 </html>
