Added the third recipe called meatballs

--- a/html-exercises/odin-recipes/index.html
+++ b/html-exercises/odin-recipes/index.html
@@ -11,6 +11,7 @@
     <ol>
         <li><a href="recipes/lasagne.html">lasagne</a></li>
         <li><a href="recipes/fries.html">fries</a></li>
+        <li><a href="recipes/meatballs.html">meatballs</a></li>
     </ol>
 </body>
 </html>
