--- a/html-exercises/odin-recipes/recipes/meatballs.html
+++ b/html-exercises/odin-recipes/recipes/meatballs.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fries</title>
+    <title>Meatballs</title>
 </head>
 <body>
-    <h1>Fries</h1>
-        <img src="../images/fries.jpg" alt="a plate of fries" height="300px" width="auto">
+    <h1>Meatballs</h1>
+        <img src="../images/meatballs.jpg" alt="a plate of meatballs" height="300px" width="auto">
         <article>
             <h2>Description</h2>
-            <p>A plate of fries with salt.</p>
+            <p>A plate of meatballs</p>
         
             <h2>Ingredients</h2>
             <ul>
-                <li>potatoes</li>
-                <li>salt</li>
+                <li>pasta</li>
+                <li>Tomatoes</li>
+                <li>Meatballs</li>
             </ul>
 
             <h2>Steps</h2>
             <ol>
-                <li>Cut potatoes into frie shape</li>
-                <li>Bake the fries in fat</li>
-                <li>Serve with salt</li>
-                
+                <li>prepare the meatballs</li>
+                <li>Cook the spaghetti</li>
+                <li>Serve on a plate</li>
             </ol>
         </article>    
     <p><a href="/html-exercises/odin-recipes/index.html">Back to homepage</a></p>
